Added terraform-aws-secure-baseline as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -67,3 +67,6 @@
 [submodule "terraform_modules/terraform-aws-acm"]
 	path = terraform_modules/terraform-aws-acm
 	url = git@github.com:terraform-aws-modules/terraform-aws-acm.git
+[submodule "terraform_modules/terraform-aws-secure-baseline"]
+	path = terraform_modules/terraform-aws-secure-baseline
+	url = https://github.com/nozaq/terraform-aws-secure-baseline.git
